# N-Body

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  \  compile_flags.txt
include/: Bodies.hpp  Concepts.hpp  NBody.hpp  Particles.hpp  Storage.hpp  concepts.hpp  constants.hpp  nbody.hpp  particles.hpp  static_array.hpp  system.hpp
include/detail/: iterator_particles.hpp  particle_view.hpp
include/integrators/: euler.hpp  integrators.hpp
include/physics/: compute_accelerations.hpp  updates.hpp
include/utils/: compute_energy.hpp  init_galaxy.hpp
src/: main.cpp
tests/: CMakeLists.txt  test_nbody.cpp  test_particles.cpp  test_physics.cpp  test_system.cpp  test_utils.cpp
tests/test_Bodies/: CMakeLists.txt  test_bodies.cpp
